Fix display property in green box styles for correct visibility

--- a/2day_box.css
+++ b/2day_box.css
@@ -6,8 +6,8 @@
 }
 .green {
     border: 50px solid green;
-    --display:none;
-    visibility:hidden
+    display:none;
+    --visibility:hidden
 }
 .blue {
     border: 50px solid blue;
